Release 0.9.2 (January 8, 2014)
============

* FIX: DataFinder was broken due to a typo
* FIX: Order of DataFinder outputs was not guaranteed, it's human sorted now
* ENH: New interfaces: Vnifti2Image

Release 0.9.1 (December 25, 2013)
============

* FIX: installation issues

Release 0.9.0 (December 20, 2013)
============

* ENH: SelectFiles: a streamlined version of DataGrabber
* ENH: new tools for defining workflows: JoinNode, synchronize and itersource
* ENH: W3C PROV support with optional RDF export built into Nipype
* ENH: Added support for Simple Linux Utility Resource Management (SLURM)
* ENH: AFNI interfaces refactor, prefix, suffix are replaced by "flexible_%s_templates"
* ENH: New SPM interfaces:
		- spm.ResliceToReference,
		- spm.DicomImport
* ENH: New AFNI interfaces:
		- afni.AFNItoNIFTI
		- afni.TCorr1D
* ENH: Several new interfaces related to Camino were added:
        - camino.SFPICOCalibData
        - camino.Conmat
        - camino.QBallMX
        - camino.LinRecon
        - camino.SFPeaks
        One outdated interface no longer part of Camino was removed:
        - camino.Conmap
* ENH: Three new mrtrix interfaces were added:
        - mrtrix.GenerateDirections
        - mrtrix.FindShPeaks
        - mrtrix.Directions2Amplitude
* ENH: New FSL interfaces:
		- fsl.PrepareFieldmap
		- fsl.TOPUP
		- fsl.ApplyTOPUP
		- fsl.Eddy
* ENH: New misc interfaces:
		- FuzzyOverlap,
		- P2PDistance
* ENH: New workflows: nipype.workflows.dmri.fsl.epi.[fieldmap_correction&topup_correction]
* ENH: Added simplified outputname generation for command line interfaces.
* ENH: Allow ants use a single mask image
* ENH: Create configuration option for parameterizing directories with hashes
* ENH: arrange nodes by topological sort with disconnected subgraphs
* ENH: uses the nidm iri namespace for uuids
* ENH: remove old reporting webpage
* ENH: Added support for Vagrant

* API: 'name' is now a positional argument for Workflow, Node, and MapNode constructors