@@ -1,3 +1,3 @@
 # emacs: -*- mode: python; py-indent-offset: 4; indent-tabs-mode: nil -*-
 # vi: set ft=python sts=4 ts=4 sw=4 et:
-from .vista import (Vnifti2Image)
+from .vista import (Vnifti2Image, VtoMat)
