@@ -32,10 +32,35 @@ class Vnifti2Image(CommandLine):
 
     >>> vimage = Vnifti2Image()
     >>> vimage.inputs.in_file = 'image.nii'
-    >>> vimage.inputs.out_file = 'image.v'
     >>> vimage.run()                                       # doctest: +SKIP
     """
 
     _cmd = 'vnifti2image'
     input_spec=Vnifti2ImageInputSpec
     output_spec=Vnifti2ImageOutputSpec
+    
+    
+class VtoMatInputSpec(CommandLineInputSpec):
+    in_file = File(exists=True, argstr='-in %s', mandatory=True, position=1, desc='in file')
+    out_file = File(name_template="%s.mat", keep_extension=False, argstr='-out %s', hash_files=False,
+                    position= -1, desc='output mat file', name_source=["in_file"])
+
+class VtoMatOutputSpec(TraitedSpec):
+    out_file = File(exists=True, desc='Output mat file')
+
+class VtoMat(CommandLine):
+    """
+    Convert a nifti file into a vista file.
+
+    Example
+    -------
+
+    >>> vimage = VtoMat()
+    >>> vimage.inputs.in_file = 'image.v'
+    >>> vimage.run()                                       # doctest: +SKIP
+    """
+
+    _cmd = 'vtomat'
+    input_spec=VtoMatInputSpec
+    output_spec=VtoMatOutputSpec
+
